[tool.poetry]
name = "shopping"
version = "0.1.0"
description = ""
authors = [
  "Frank Cao <frank.cao@dyson.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = [
#     "--import-mode=importlib",
# ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120